chore(test): upgrate test JUnit 4->5
chore: bump pom

TIS21-8840: Funding Types require Subtypes when available